--- a/portfolio/src/styles/pages/index.css
+++ b/portfolio/src/styles/pages/index.css
@@ -7,4 +7,7 @@
 @import '../components/PictoGithub.css';
 @import '../components//PictoLinkedin.css';
 @import '../components/Footer.css';
+@import '../components/Apropos.css';
+@import '../components/Competences.css';
+@import '../components/Portfolio.css';
 @import '';
