commit -m " ajout img png skills"

--- a/portfolio/src/styles/pages/index.css
+++ b/portfolio/src/styles/pages/index.css
@@ -10,4 +10,5 @@
 @import '../components/Apropos.css';
 @import '../components/Competences.css';
 @import '../components/Portfolio.css';
+@import '../components/Homepage.css';
 @import '';
