--- a/portfolio/src/styles/pages/index.css
+++ b/portfolio/src/styles/pages/index.css
@@ -11,4 +11,6 @@
 @import '../components/Competences.css';
 @import '../components/Portfolio.css';
 @import '../components/Homepage.css';
+@import '../components/PhotoPortrait.css';
+@import '../components/ProgressBar.css';
 @import '';
