--- a/portfolio/src/styles/components/naviguation.css
+++ b/portfolio/src/styles/components/naviguation.css
@@ -4,10 +4,13 @@
     max-width: 900px;
 }
 .nav a{
-    font-size: 22px;
+    font-size: 28px;
     font-style: normal;
     text-transform: uppercase;
     color:#F18971;
+}
+.nav a:hover{
+    text-decoration: line-through;
 }
 li{
     text-decoration: none;
