commit -m "button hover"

--- a/portfolio/src/styles/components/Homepage.css
+++ b/portfolio/src/styles/components/Homepage.css
@@ -68,6 +68,9 @@
     background-color: #5EBDB0;
     width: 200px;
 }
+.portfolioOnline:hover{
+    background-color: #F18971;
+}
 .portfolioOnline a, .portfolioOnline a:hover{
     color:#ededed;
 }
