--- a/portfolio/src/styles/components/Competences.css
+++ b/portfolio/src/styles/components/Competences.css
@@ -15,7 +15,10 @@ li {
     text-align-last: center;   
 }
 .portfolioContent a{
-    color: #008A77;
+    color: #fff;
+}
+.portfolioContent a:hover{
+    color: #0D3653;
 }
 .skills{
     position: relative;
@@ -48,3 +51,49 @@ li {
     justify-content: flex-start;
     padding: 20px 0px;
 }
+
+
+@media screen and (max-width: 1400px) and (min-width: 1024px){
+    li{
+        width: 150px px;
+    }
+    #techno{
+        max-width: 1000px;
+    }
+}
+@media screen and (max-width: 1023px) and (min-width: 900px){
+    .skills li img{
+        width:60px;
+    }
+}
+@media screen and (max-width: 899px) and (min-width: 768px){
+    .skills li img{
+        width: 50px;
+    }
+    ul{
+        margin-top: 10px;
+        margin-bottom: 0px;
+    }
+}
+@media screen and (max-width: 767px) and (min-width: 600px){
+    .skills li img{
+        width: 40px;
+    }
+        
+}
+@media screen and (max-width: 599px) and (min-width: 375px){
+    .skills li img{
+        width: 40px;
+    }
+    .graf{
+        width: 200px;
+    }
+    .bloc-ul{
+        padding: 0px;
+    }
+}
+
+@media screen and (max-width: 374px) {
+    
+}
+
