--- a/portfolio/src/styles/components/Homepage.css
+++ b/portfolio/src/styles/components/Homepage.css
@@ -65,17 +65,193 @@
     font-family: "El Messiri", sans-serif;
 }
 .portfolioOnline{
-    background-color: #5EBDB0;
+    background-color: #0D3653;
     width: 200px;
 }
 .portfolioOnline:hover{
-    background-color: #F18971;
+    background-color: #a8a8a8;
 }
 .portfolioOnline a, .portfolioOnline a:hover{
     color:#ededed;
 }
 .CvOnline{
-    background-color: #008A77;
+   
     color:#ededed;
     width:300px;
 }
+
+
+
+@media screen and (max-width: 1400px) and (min-width: 1024px){
+ .homepage{
+    max-width: 1400px;
+    height: 500px;
+ }
+ .homepage h1{
+    font-size: 50px;
+    max-width: 500px;
+ }
+ .homepage img{
+    right: 50px;
+ }
+ .homepage button{
+    font-size: 15px;
+ }
+}
+@media screen and (max-width: 1023px) and (min-width: 900px){
+    .homepage{
+        height: 450px;
+    }
+    .homepage h1{
+        font-size:40px;
+        max-width: 400px;
+    }
+    .homepage img{
+        right: 30px;
+        top: 80px;
+        width: 250px;
+    }
+    .homepage button{
+        padding: 8px;
+    }
+    .mainButton{
+        max-width: 600px;
+        position: relative;
+        top: 150px;
+        right:220px
+    }
+    .mainButton ul{
+        display: block;
+    }
+}
+@media screen and (max-width: 899px) and (min-width: 768px){
+    .homepage{
+        height: 380px;
+    }
+    .homepage h1{
+        font-size:45px;
+        max-width: 400px;
+    }
+    .homepage img{
+        width: 200px;
+        position: absolute;
+        right: 100px;
+        top: 110px;
+    }
+    .homepage button{
+        font-size: 14px;
+    }
+    .portfolioOnline{
+        width: 100px;
+    }
+    .CvOnline{
+        width: 200px;
+    }
+    .mainButton{
+        max-width: 400px;
+        position: relative;
+        top: 100px;
+        right: 100px;
+    }
+}
+@media screen and (max-width: 767px) and (min-width: 600px){
+    .homepage h1{
+    font-size: 30px;
+    max-width: 120px;
+    border-top: 0px;
+    text-shadow: none;
+    color: #0D3653;
+    text-transform: capitalize;
+    position: relative;
+    top: 100px;
+    left: 150px;
+    text-align: justify;
+    }
+    .homepage img{
+    width: 200px;
+    position: absolute;
+    right: 250px;
+    top: 80px;
+    }
+    .homepage button{
+        padding: 5px;
+        border-radius: 5px;
+        border: 0px solid;
+        font-size: 14px;
+    }
+    .mainButton{
+        max-width: 600px;
+        position: relative;
+        top: 80px;
+        right: 0px;
+    }
+    .homepage{
+        max-width: 600px;
+    position: relative;
+    bottom: 180px;
+    right: 100px;
+    height: 420px;
+    border-radius: 30px;
+    }
+    .mainButton ul{
+            display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        flex-direction: column;
+        }
+    
+    }
+
+    @media screen and (max-width: 599px) and (min-width: 375px){
+        .homepage h1{
+            font-size: 30px;
+            max-width: 120px;
+            border-top: 0px;
+            text-shadow: none;
+            color: #0D3653;
+            text-transform: capitalize;
+            position: relative;
+            top: 100px;
+            left: 150px;
+            text-align: justify;
+            }
+            .homepage img{
+                width: 150px;
+                position: absolute;
+                right: 80px;
+                top: 120px;
+            }
+            .homepage button{
+                padding: 5px;
+                border-radius: 5px;
+                border: 0px solid;
+                font-size: 13px;
+            }
+            .mainButton{
+                max-width: 600px;
+                position: relative;
+                top: 80px;
+                right: 0px;
+            }
+            .homepage{
+                max-width: 599px;
+            position: relative;
+            bottom: 180px;
+            right: 100px;
+            height: 420px;
+            border-radius: 30px;
+            }
+            .mainButton ul{
+                    display: flex;
+                justify-content: center;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                flex-direction: column;
+                }
+    }
+    
+    @media screen and (max-width: 374px) {
+        
+    }
+    
