--- a/portfolio/src/styles/components/naviguation.css
+++ b/portfolio/src/styles/components/naviguation.css
@@ -16,3 +16,48 @@ li{
     text-decoration: none;
 }
 
+@media screen and (max-width: 1400px) and (min-width: 1024px){
+ .nav a {
+    font-size: 20px;
+ }
+ .nav{
+    max-width: 500px;
+    position: relative;
+    right: 150px;
+ }
+}
+@media screen and (max-width: 1023px) and (min-width: 900px){
+   .nav a{
+    font-size: 18px;
+   } 
+   .nav{
+    max-width: 400px;
+    position: relative;
+    right: 100px;
+   }
+}
+@media screen and (max-width: 899px) and (min-width: 768px){
+    .nav a{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 767px) and (min-width: 600px){
+    .nav{
+        max-width: 500px;
+    }
+    .nav a{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 599px) and (min-width: 375px){
+    .nav{
+        max-width: 375px;
+    }
+    .nav a{
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 374px) {
+    
+}
