--- a/portfolio/src/styles/pages/CVonline.css
+++ b/portfolio/src/styles/pages/CVonline.css
@@ -164,4 +164,22 @@
     }
 }
 
- 
+@media screen and (max-width: 1400px) and (min-width: 1024px){
+
+}
+@media screen and (max-width: 1023px) and (min-width: 900px){
+    
+}
+@media screen and (max-width: 899px) and (min-width: 768px){
+    
+}
+@media screen and (max-width: 767px) and (min-width: 600px){
+    
+}
+@media screen and (max-width: 599px) and (min-width: 375px){
+    
+}
+
+@media screen and (max-width: 374px) {
+    
+}
